fix spacing on mobile

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ footer p:first-of-type {
 
   .container {
     border: none;
-    margin: 0 auto;
+    margin: 5em auto;
     padding: 0;
     background: none;
   }
